--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
   "name": "uchat",
   "version": "0.1.0",
+  "description": "A socket.io chat app with React",
+  "main": "server/server.js",
   "private": true,
+  "author": "Martin Martinov <@mmartinov>",
+  "license": "MIT",
   "dependencies": {
+    "express": "^4.16.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "socket.io": "^2.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server/server.js",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": "8.9.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@gitlab.com:martinov/uchat.git"
   }
 }
