--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.2",
+    "moment": "^2.19.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14",
@@ -27,5 +28,6 @@
   "repository": {
     "type": "git",
     "url": "git@gitlab.com:martinov/uchat.git"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
