Updating proxy config

--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
     "type": "git",
     "url": "git@gitlab.com:martinov/uchat.git"
   },
-  "proxy": "http://localhost:3001/"
+  "proxy": {
+    "/socket.io": {
+      "target": "ws://localhost:3001",
+      "ws": true
+    }
+  }
 }
