--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.19.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.14",
     "redux": "^3.7.2",
     "socket.io": "^2.0.4",
