--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.14",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "socket.io": "^2.0.4",
     "uuid": "^3.1.0"
   },
